--- a/app/src/main/res/drawable/rounded_edit_text.xml
+++ b/app/src/main/res/drawable/rounded_edit_text.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#B2C4F4" />
+    <solid android:color="#FFC684" />
     <corners android:radius="20dp" />
     <stroke
         android:width="1dp"
-        android:color="@android:color/darker_gray" />
+        android:color="#FFC684" />
 </shape>
