--- a/app/src/main/res/layout/activity_add_expenses.xml
+++ b/app/src/main/res/layout/activity_add_expenses.xml
@@ -7,18 +7,28 @@
     android:layout_height="match_parent"
     tools:context=".AddExpenses">
 
-
+<ImageButton
+    android:id="@+id/back_icon"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    android:src="@drawable/back"
+    android:background="@color/white"
+    android:layout_marginTop="20dp"
+    android:layout_marginLeft="20dp"
+    />
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/add_expenses"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/back_icon"
     app:layout_constraintEnd_toEndOf="parent"
     android:text="Add Expenses"
     android:textSize="24sp"
     android:textStyle="bold"
-    android:layout_marginTop="40dp"
+    android:layout_marginTop="30dp"
     />
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
@@ -83,7 +93,7 @@
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:padding="10dp"
-           android:background="#B2C4F4">
+           android:background="#FFC684">
            <TextView
                android:id="@+id/create_category"
                android:layout_width="wrap_content"
@@ -207,20 +217,10 @@
         android:layout_marginTop="30dp"
         android:textColor="@color/white"
         android:textSize="25dp"
-        android:backgroundTint="@color/black"
+        android:backgroundTint="#010A4D"
         app:layout_constraintTop_toBottomOf="@id/card_4"
-        app:layout_constraintBottom_toTopOf="@id/bottom_nav_bar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:text="save" />
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_nav_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:menu="@menu/bottom_nav_menu"
-        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
