--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
 >
+
+
     <include
         android:id="@+id/empty_transaction_view"
         layout="@layout/empty_transaction_view"
-        app:layout_constraintTop_toBottomOf="@id/recyclerview"
+        app:layout_constraintTop_toBottomOf="@id/text_2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -53,7 +55,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:layout_marginLeft="20dp"
-                android:text="$ 00"
+                android:text="$ 0.00"
                 android:textColor="@color/white"
                 android:textSize="36sp"
                 android:textStyle="bold"
@@ -99,7 +101,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/card_5_text_1"
                 app:layout_constraintStart_toStartOf="parent"
-                android:text="+ $20000"
+                android:text=" $0.00"
                 android:textSize="24dp"
                 android:textStyle="bold"
                 android:textColor="@color/white"
@@ -144,7 +146,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:text="- $200"
+                android:text=" $0.00"
                 android:textColor="@color/white"
                 android:textSize="24dp"
                 android:textStyle="bold"
@@ -166,55 +168,73 @@
         android:layout_marginTop="35dp"
         android:layout_marginLeft="20dp"
         />
-    <TextView
-        android:id="@+id/text_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="View All"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        app:layout_constraintTop_toBottomOf="@id/card_6"
-        app:layout_constraintEnd_toEndOf="@id/card_6"
-        android:layout_marginTop="35dp"
-        android:layout_marginRight="20dp"
-        />
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview"
+<!--    <androidx.recyclerview.widget.RecyclerView-->
+<!--        android:id="@+id/recyclerview"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/text_2"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        />-->
+
+<!--    <ImageButton-->
+<!--        android:id="@+id/add_icon"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:background="@drawable/circle_background"-->
+<!--        android:src="@drawable/ic_add_expenses"-->
+<!--        app:layout_constraintBottom_toTopOf="@id/bottom_nav_bar"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        android:padding="10dp"-->
+<!--        android:layout_marginTop="2dp"-->
+<!--        android:layout_marginBottom="2dp"-->
+<!--        android:layout_marginEnd="20dp"-->
+<!--        android:contentDescription="Add Icon"-->
+<!--        />-->
+
+
+    <FrameLayout
+        android:id="@+id/frame_1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/text_2"
+        app:layout_constraintBottom_toTopOf="@id/bottom_nav_bar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintEnd_toEndOf="parent">
 
-    <ImageButton
-        android:id="@+id/add_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/circle_background"
-        android:src="@drawable/ic_add_expenses"
-        app:layout_constraintTop_toBottomOf="@id/recyclerview"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:padding="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginEnd="30dp"
-        android:contentDescription="Add Icon"
-        />
+        <!-- RecyclerView for Transactions -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"/>
 
-
+        <!-- Fixed Add Icon -->
+        <ImageButton
+            android:id="@+id/add_icon"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_gravity="end|bottom"
+            android:src="@drawable/ic_add_expenses"
+            android:background="@drawable/circle_background"
+            android:padding="10dp"
+            android:elevation="10dp"
+            android:layout_margin="20dp"/>
+    </FrameLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-    android:id="@+id/bottom_nav_bar"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/white"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:menu="@menu/bottom_nav_menu"
-    />
+        android:id="@+id/bottom_nav_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:menu="@menu/bottom_nav_menu"
+        app:itemIconSize="22dp"
+        app:labelVisibilityMode="unlabeled"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
