--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,13 +3,13 @@
     <item
         android:icon="@drawable/home"
         android:id="@+id/nav_home"
-        android:title="Home"
-        />
+        android:title=""
 
+        />
     <item
         android:icon="@drawable/graph"
         android:id="@+id/nav_graph"
-        android:title="Graph"/>
-
+        android:title=""
+        />
 
 </menu>
